--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@
 name = "smelling_salts"
 version = "0.1.0"
 authors = ["Jeron Aldaron Lau <jeronlau@plopgrizzly.com>"]
-license = "Apache-2.0 OR Zlib"
+license = "Apache-2.0/Zlib"
 
 description = """
 Start a thread to wake an async executor when the OS's I/O event notifier
@@ -35,7 +35,7 @@ maintenance = { status = "actively-developed" }
 [dependencies]
 
 [dev-dependencies]
-pasts = "0.4"
+pasts = "0.5"
 
 [package.metadata.docs.rs]
 all-features = true
