--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,3 +35,6 @@ pasts = "0.7"
 [package.metadata.docs.rs]
 all-features = true
 default-target = "x86_64-unknown-linux-gnu"
+
+# [patch.crates-io]
+# pasts = { path = "../pasts" }
