--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@
 
 [package]
 name = "smelling_salts"
-version = "0.4.0"
+version = "0.5.0"
 license = "Apache-2.0 OR MIT OR BSL-1.0"
 
 description = "Abstraction over file descriptors to wake futures when ready."
@@ -25,10 +25,7 @@ edition = "2018"
 [dependencies.flume]
 version = "0.10"
 default-features = false
+features = ["async"]
 
 [dev-dependencies]
 pasts = "0.8"
-
-[package.metadata.docs.rs]
-all-features = true
-default-target = "x86_64-unknown-linux-gnu"
