--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,9 @@
 
 [package]
 name = "smelling_salts"
-version = "0.6.0"
+version = "0.7.0"
 license = "Apache-2.0 OR MIT OR BSL-1.0"
-description = "Abstraction over file descriptors to wake futures when ready."
+description = "Abstraction over OS APIs to handle asynchronous device waking"
 repository = "https://github.com/AldaronLau/smelling_salts"
 documentation = "https://docs.rs/smelling_salts"
 homepage = "https://github.com/AldaronLau/smelling_salts/blob/master/CHANGELOG.md"
@@ -41,3 +41,13 @@ epoll = []
 kqueue = []
 # MacOS runloop
 runloop = []
+
+[[example]]
+name = "pipe"
+path = "examples/pipe.rs"
+required-features = ["epoll"]
+
+[[example]]
+name = "sleep"
+path = "examples/sleep.rs"
+required-features = ["epoll"]
