--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,8 +7,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest] #, macos-latest, windows-latest]
-        tc: [stable, beta, nightly]
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        tc: [1.60.0, stable, beta, nightly]
         ar:
         - --all --no-default-features
         - --all --all-features
