--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,15 +3,50 @@ on: [push, pull_request]
 name: tests
 
 jobs:
-  test:
-    runs-on: ${{ matrix.os }}
+  test-linux:
+    runs-on: ubuntu-latest
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
         tc: [1.60.0, stable, beta, nightly]
         ar:
         - --all --no-default-features
-        - --all --all-features
+        - --all --features=epoll
+    steps:
+    - uses: actions/checkout@v2
+    - uses: actions-rs/toolchain@v1
+      with:
+        profile: minimal
+        toolchain: ${{ matrix.tc }}
+        override: true
+    - uses: actions-rs/cargo@v1
+      with:
+        command: test
+        args: ${{ matrix.ar }}
+  test-macos:
+    runs-on: macos-latest
+    strategy:
+      matrix:
+        tc: [1.60.0, stable, beta, nightly]
+        ar:
+        - --all --no-default-features
+    steps:
+    - uses: actions/checkout@v2
+    - uses: actions-rs/toolchain@v1
+      with:
+        profile: minimal
+        toolchain: ${{ matrix.tc }}
+        override: true
+    - uses: actions-rs/cargo@v1
+      with:
+        command: test
+        args: ${{ matrix.ar }}
+  test-windows:
+    runs-on: windows-latest
+    strategy:
+      matrix:
+        tc: [1.60.0, stable, beta, nightly]
+        ar:
+        - --all --no-default-features
     steps:
     - uses: actions/checkout@v2
     - uses: actions-rs/toolchain@v1
