--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,13 +9,13 @@
 
 [package]
 name = "smelling_salts"
-version = "0.7.0"
-license = "Apache-2.0 OR MIT OR BSL-1.0"
+version = "0.7.1"
+license = "Apache-2.0 OR BSL-1.0 OR MIT"
 description = "Abstraction over OS APIs to handle asynchronous device waking"
 repository = "https://github.com/ardaku/smelling_salts"
 documentation = "https://docs.rs/smelling_salts"
 homepage = "https://github.com/ardaku/smelling_salts/blob/master/CHANGELOG.md"
-include = ["Cargo.toml", "README.md", "src/*"]
+include = ["README.md", "src/*"]
 categories = [
     "asynchronous",
     "rust-patterns",
@@ -28,6 +28,9 @@ readme = "README.md"
 edition = "2021"
 rust-version = "1.60"
 
+[package.metadata.docs.rs]
+all-features = true
+
 [dependencies.pasts]
 version = "0.12"
 
@@ -36,6 +39,7 @@ version = "0.7"
 features = ["pasts"]
 
 [features]
+default = []
 # Modern Linux file descriptors
 epoll = []
 # BSD/MacOS file descriptors
