--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,13 +9,13 @@
 
 [package]
 name = "smelling_salts"
-version = "0.7.1"
+version = "0.7.2"
 license = "Apache-2.0 OR BSL-1.0 OR MIT"
 description = "Abstraction over OS APIs to handle asynchronous device waking"
 repository = "https://github.com/ardaku/smelling_salts"
 documentation = "https://docs.rs/smelling_salts"
 homepage = "https://github.com/ardaku/smelling_salts/blob/master/CHANGELOG.md"
-include = ["README.md", "src/*"]
+include = ["README.md", "src/*", "examples/*"]
 categories = [
     "asynchronous",
     "rust-patterns",
